[package]
name = "wasmium-securemem"
version = "0.1.0"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network"]
license = "CC0-1.0 OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.2.0", default-features = false }
lazy_static = "1.4.0"
nanorand = { version = "0.6.1", features = [
    "chacha",
], default-features = false }
secrecy = "0.8.0"
zeroize = { version = "1.4.3", default-features = false }
