[package]
name = "wasmium-memvault"
version = "1.0.0"
edition = "2021"
authors = ["Wasmium Network Developers <hq@wasmium.network"]
license = "CC0-1.0 OR Apache-2.0"
description = "Secures Ed25519 signing keys and other secrets in memory"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
chacha20poly1305 = { version = "0.9.0", features = [
    "reduced-round",
    "heapless",
    "alloc",
], default-features = false }
lazy_static = "1.4.0"
nanorand = { version = "0.7.0", features = [
    "chacha",
    "alloc",
], default-features = false }
secrecy = "0.8.0"
zeroize = { version = "=1.4.3", default-features = false }
ed25519-dalek = { version = "1.0.1", features = [
    "std",
    "u64_backend",
], default-features = false }
bs58 = { version = "0.4.0", optional = true }
rand = "=0.7"

[features]
dangerous_debug = []
satoshi_mode = ["dep:bs58"]

[dev-dependencies]
ed25519-dalek = { version = "1.0.1", features = [
    "std",
    "u64_backend",
], default-features = false }
